+ Divide Resume builder into sections + Create new columns in Document table (DB) + Bug: Fix list <li> left spacing on date

--- a/css/main.css
+++ b/css/main.css
@@ -285,32 +285,32 @@
 	margin-top: 20px;
 }
 
-#edit .div-rounded{
+.edit-resume #edit .div-rounded{
 	border-radius:5px;
 	border: 1px solid #ccc;
 	margin-bottom: 20px;
 }
 
-	#edit .div-rounded ul{
+	.edit-resume #edit .div-rounded ul{
 		list-style-type:none;
 	}
 	
-		#edit .div-rounded li{
+		.edit-resume #edit .div-rounded li{
 			text-align:center;
 			border-bottom: 1px solid #ccc;
 			padding: 5px 0px;
 			font-size: 10pt;
 			font-weight: bold;
 		}
-		#edit .div-rounded li:last-child{
+		.edit-resume #edit .div-rounded li:last-child{
 			border-bottom:none;
 		}
 	
-	#edit ul, ol {
+	.edit-resume #edit ul, ol {
 		padding: 0;
 		margin: 0;
 	}
 		
-	#edit .div-rounded h2,h3,h4{
+	.edit-resume #edit .div-rounded h2,.div-rounded h3,.div-rounded h4{
 		text-align:center;
 	}
